[bug 809572] Improve contrast.
Main nav and article listings.

--- a/media/less/main.less
+++ b/media/less/main.less
@@ -1056,7 +1056,7 @@ input[type=button],
 }
 
 #main-nav {
-  .linear-gradient-top(#d8e1e8, #d8e1e8, 0%, #d1dbe2, 100%, url('../img/grain.png'));
+  background: #fff url('../img/grain.png') no-repeat;
   border-color: #c8d2d8 #c8d2d8 #ebeff3 #c8d2d8;
   border-style: solid;
   border-width: 1px;
